crates/compiler/parser/tests/snapshots/statements::tuple_destructuring_from_function_call.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { let (x, y) = get_pair(); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Let {
                            pattern: Tuple(
                                [
                                    Spanned(
                                        "x",
                                        19..20,
                                    ),
                                    Spanned(
                                        "y",
                                        22..23,
                                    ),
                                ],
                            ),
                            statement_type: None,
                            value: Spanned(
                                FunctionCall {
                                    callee: Spanned(
                                        Identifier(
                                            Spanned(
                                                "get_pair",
                                                27..35,
                                            ),
                                        ),
                                        27..35,
                                    ),
                                    args: [],
                                },
                                27..37,
                            ),
                        },
                        14..38,
                    ),
                ],
            },
            0..40,
        ),
    ),
]
