crates/compiler/parser/tests/snapshots/toplevel::const_with_expression.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
const COMPUTED = 2 * 3 + 1;
--- AST ---
[
    Const(
        Spanned(
            ConstDef {
                name: Spanned(
                    "COMPUTED",
                    6..14,
                ),
                value: Spanned(
                    BinaryOp {
                        op: Add,
                        left: Spanned(
                            BinaryOp {
                                op: Mul,
                                left: Spanned(
                                    Literal(
                                        2,
                                    ),
                                    17..18,
                                ),
                                right: Spanned(
                                    Literal(
                                        3,
                                    ),
                                    21..22,
                                ),
                            },
                            17..22,
                        ),
                        right: Spanned(
                            Literal(
                                1,
                            ),
                            25..26,
                        ),
                    },
                    17..26,
                ),
            },
            0..27,
        ),
    ),
]
