crates/compiler/parser/tests/snapshots/toplevel::function_multiple_params.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn complex(a: felt, b: felt*, c: (felt, felt)) { }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "complex",
                    3..10,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "a",
                            11..12,
                        ),
                        type_expr: Named(
                            "felt",
                        ),
                    },
                    Parameter {
                        name: Spanned(
                            "b",
                            20..21,
                        ),
                        type_expr: Pointer(
                            Named(
                                "felt",
                            ),
                        ),
                    },
                    Parameter {
                        name: Spanned(
                            "c",
                            30..31,
                        ),
                        type_expr: Tuple(
                            [
                                Named(
                                    "felt",
                                ),
                                Named(
                                    "felt",
                                ),
                            ],
                        ),
                    },
                ],
                return_type: Tuple(
                    [],
                ),
                body: [],
            },
            0..50,
        ),
    ),
]
