crates/compiler/parser/tests/snapshots/toplevel::function_no_return.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func print_hello() { let msg = hello; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "print_hello",
                    5..16,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "msg",
                                    25..28,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                Identifier(
                                    Spanned(
                                        "hello",
                                        31..36,
                                    ),
                                ),
                                31..36,
                            ),
                        },
                        21..37,
                    ),
                ],
            },
            0..39,
        ),
    ),
]
