crates/compiler/parser/tests/snapshots/toplevel::function_with_loops.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---

        func test_loops() {
            loop {
                let x = 1;
                if (x == 1) {
                    break;
                }
            }

            let counter = 0;
            while (counter != 10) {
                counter = counter + 1;
            }

            for i in range {
                let squared = i * i;
            }
        }
    
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test_loops",
                    14..24,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Loop {
                            body: Spanned(
                                Block(
                                    [
                                        Spanned(
                                            Let {
                                                pattern: Identifier(
                                                    Spanned(
                                                        "x",
                                                        68..69,
                                                    ),
                                                ),
                                                statement_type: None,
                                                value: Spanned(
                                                    Literal(
                                                        1,
                                                    ),
                                                    72..73,
                                                ),
                                            },
                                            64..74,
                                        ),
                                        Spanned(
                                            If {
                                                condition: Spanned(
                                                    BinaryOp {
                                                        op: Eq,
                                                        left: Spanned(
                                                            Identifier(
                                                                Spanned(
                                                                    "x",
                                                                    95..96,
                                                                ),
                                                            ),
                                                            95..96,
                                                        ),
                                                        right: Spanned(
                                                            Literal(
                                                                1,
                                                            ),
                                                            100..101,
                                                        ),
                                                    },
                                                    95..101,
                                                ),
                                                then_block: Spanned(
                                                    Block(
                                                        [
                                                            Spanned(
                                                                Break,
                                                                125..131,
                                                            ),
                                                        ],
                                                    ),
                                                    103..149,
                                                ),
                                                else_block: None,
                                            },
                                            91..149,
                                        ),
                                    ],
                                ),
                                46..163,
                            ),
                        },
                        41..163,
                    ),
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "counter",
                                    181..188,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                Literal(
                                    0,
                                ),
                                191..192,
                            ),
                        },
                        177..193,
                    ),
                    Spanned(
                        While {
                            condition: Spanned(
                                BinaryOp {
                                    op: Neq,
                                    left: Spanned(
                                        Identifier(
                                            Spanned(
                                                "counter",
                                                213..220,
                                            ),
                                        ),
                                        213..220,
                                    ),
                                    right: Spanned(
                                        Literal(
                                            10,
                                        ),
                                        224..226,
                                    ),
                                },
                                213..226,
                            ),
                            body: Spanned(
                                Block(
                                    [
                                        Spanned(
                                            Assignment {
                                                lhs: Spanned(
                                                    Identifier(
                                                        Spanned(
                                                            "counter",
                                                            246..253,
                                                        ),
                                                    ),
                                                    246..253,
                                                ),
                                                rhs: Spanned(
                                                    BinaryOp {
                                                        op: Add,
                                                        left: Spanned(
                                                            Identifier(
                                                                Spanned(
                                                                    "counter",
                                                                    256..263,
                                                                ),
                                                            ),
                                                            256..263,
                                                        ),
                                                        right: Spanned(
                                                            Literal(
                                                                1,
                                                            ),
                                                            266..267,
                                                        ),
                                                    },
                                                    256..267,
                                                ),
                                            },
                                            246..268,
                                        ),
                                    ],
                                ),
                                228..282,
                            ),
                        },
                        206..282,
                    ),
                    Spanned(
                        For {
                            variable: Spanned(
                                "i",
                                300..301,
                            ),
                            iterable: Spanned(
                                Identifier(
                                    Spanned(
                                        "range",
                                        305..310,
                                    ),
                                ),
                                305..310,
                            ),
                            body: Spanned(
                                Block(
                                    [
                                        Spanned(
                                            Let {
                                                pattern: Identifier(
                                                    Spanned(
                                                        "squared",
                                                        333..340,
                                                    ),
                                                ),
                                                statement_type: None,
                                                value: Spanned(
                                                    BinaryOp {
                                                        op: Mul,
                                                        left: Spanned(
                                                            Identifier(
                                                                Spanned(
                                                                    "i",
                                                                    343..344,
                                                                ),
                                                            ),
                                                            343..344,
                                                        ),
                                                        right: Spanned(
                                                            Identifier(
                                                                Spanned(
                                                                    "i",
                                                                    347..348,
                                                                ),
                                                            ),
                                                            347..348,
                                                        ),
                                                    },
                                                    343..348,
                                                ),
                                            },
                                            329..349,
                                        ),
                                    ],
                                ),
                                311..363,
                            ),
                        },
                        296..363,
                    ),
                ],
            },
            9..373,
        ),
    ),
]
