crates/compiler/parser/tests/snapshots/toplevel::import_with_alias.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
from std.math import add as plus
--- AST ---
[
    Import(
        Spanned(
            ImportStmt {
                path: [
                    Spanned(
                        "std",
                        5..8,
                    ),
                    Spanned(
                        "math",
                        9..13,
                    ),
                ],
                item: Spanned(
                    "add",
                    21..24,
                ),
                alias: Some(
                    Spanned(
                        "plus",
                        28..32,
                    ),
                ),
            },
            0..32,
        ),
    ),
]
